--- a/quick-tix/package.json
+++ b/quick-tix/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@prisma/client": "^6.11.1",
     "@sentry/nextjs": "^9.35.0",
+    "bcryptjs": "^3.0.2",
+    "cookie": "^1.0.2",
+    "jose": "^6.0.11",
     "next": "15.3.5",
     "prisma": "^6.11.1",
     "react": "^19.0.0",
